[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "publication"
author = "Glyph"
author-email = "glyph@twistedmatrix.com"
home-page = "https://github.com/glyph/publication"
description-file = "README.rst"
classifiers = ["License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 2"]
